--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2023.7.22
 charset-normalizer==3.3.2
 coverage==7.3.2
 Django==4.2.6
+django-cors-headers==4.3.0
 django-filter==23.3
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
