--- a/.env_sample
+++ b/.env_sample
@@ -4,6 +4,9 @@ DB_NAME=
 DB_USER=
 DB_PASSWORD=
 
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+
 SUPERUSER_EMAIL=
 SUPERUSER_FIRST_NAME=
 SUPERUSER_LAST_NAME=
