--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,32 +1,60 @@
 version: '3'
 
 services:
+
+  redis:
+    image: redis
+    ports:
+      - '6379:6379'
+
   db:
     image: postgres
     environment:
-      POSTGRES_PASSWORD: mysecretpassword
+      POSTGRES_DB: online_training
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 0000
       PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
-#      -  pg_data:/var/lib/postgresql/data/pgdata
+      #      -  pg_data:/var/lib/postgresql/data/pgdata
       - ./pg_data:/var/lib/postgresql/data/pgdata
     ports:
-#      - '5432:5432'
+      #      - '5432:5432'
       - '5433:5432'
     healthcheck:
-        test: ['CMD-SHELL', 'pg_isready']
-        interval: 10s
-        timeout: 5s
-        retries: 5
+      test: [ "CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   app:
     build: .
-#    command: python manage.py migrate && python manage.py runserver 0.0.0.0:8000
-    command: python manage.py runserver 0.0.0.0:8000
+    tty: true
+    #    command: python manage.py migrate && python manage.py runserver 0.0.0.0:8000
+    command: sh -c "python manage.py migrate && python manage.py test && python manage.py runserver 0.0.0.0:8000"
     ports:
       - '8000:8000'
+    volumes:
+      - .:/code
     depends_on:
       db:
         condition: service_healthy
+
+  celery:
+    build: .
+    tty: true
+    command: celery -A config worker -l INFO
+    depends_on:
+      - redis
+      - app
+
+  celery_beat:
+    build: .
+    tty: true
+    command: celery -A config beat -l info -S django
+    depends_on:
+      - redis
+      - app
+
 
 volumes:
   pg_data:
